<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    tools:context=".ui.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_detail"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/title_event"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favorite_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_favorite_border_24"
            app:fabSize="mini"
            app:backgroundTint="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/image_detail"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/title_favorite"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/title_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnSecondary"
            tools:text="@string/title_event"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/image_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="8dp"/>

        <TextView
            android:id="@+id/summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="italic"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            tools:text="@string/summary_event"
            app:layout_constraintTop_toBottomOf="@+id/title_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="8dp"/>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/summary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp">

            <TextView
                android:id="@+id/quota_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="?attr/colorOnSecondary"
                tools:text="@string/quota_event"
                android:layout_marginEnd="16dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/beginTime_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnSecondary"
                    tools:text="@string/begin_event" />

                <TextView
                    android:id="@+id/endTime_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnSecondary"
                    tools:text="@string/end_event" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/owner_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/linear1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="?attr/colorOnSecondary"
            tools:text="@string/penyelenggara_event"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/description_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            tools:text="@string/description_event"
            app:layout_constraintTop_toBottomOf="@+id/owner_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_event"
            android:textColor="@android:color/white"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
